--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	"dependencies": {
 		"@emailjs/browser": "^3.10.0",
 		"emailjs": "^4.0.1",
+		"firebase": "^10.0.0",
 		"formik": "^2.2.9",
 		"framer-motion": "^10.9.1",
 		"localforage": "^1.10.0",
